[gd_scene load_steps=5 format=3 uid="uid://lupu1wwvq3x7"]

[ext_resource type="Script" uid="uid://du4gwmdjdjv2x" path="res://Scripts/audio_manager_cooking.gd" id="1_wk3dh"]
[ext_resource type="AudioStream" uid="uid://dcpnkydasd2w4" path="res://Assets/Audios/cooking.wav" id="2_frelf"]
[ext_resource type="AudioStream" uid="uid://ctxjoft5psvub" path="res://Assets/Audios/correct.ogg" id="3_y00jl"]
[ext_resource type="AudioStream" uid="uid://b2qwx5y2aarpr" path="res://Assets/Audios/wrong.ogg" id="4_1iky5"]

[node name="AudioManager_Cooking" type="Node"]
script = ExtResource("1_wk3dh")

[node name="BackgroundMusic_Cooking" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_frelf")
volume_db = -25.0

[node name="CorrectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_y00jl")
volume_db = -5.0

[node name="WrongSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_1iky5")
volume_db = -5.0
